added basic colors variables and created all components for header

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,12 @@
   --background: #ffffff;
   --foreground: #171717;
 }
+.text-gray-c{
+  color:#0F172A;
+}
+.bg-light-c{
+  background-color: #F1F2EC;
+}
 
 @theme inline {
   --color-background: var(--background);
@@ -12,15 +18,10 @@
   --font-mono: var(--font-geist-mono);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
+
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  background: #F1F2EC;
+  color: #0F172A;
+  font-family: DM Sans, sans-serif;
 }
