added animation for burger menu btn and increased size of it and search btn

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,12 @@
 .text-gray-c{
   color:#0F172A;
 }
+.bg-gray-c{
+  background-color:#0F172A;
+}
+.border-b-gray-c{
+  border-color:#0F172A;
+}
 .bg-light-c{
   background-color: #F1F2EC;
 }
