--- a/src/app/article/[slug]/articleBody.css
+++ b/src/app/article/[slug]/articleBody.css
@@ -249,3 +249,19 @@
     color: #444442;
   }
 }
+.article-body ul {
+  list-style-type: disc; 
+  padding-left: 1.75rem;
+  margin: 1.25rem 0;
+  color: #444442;
+}
+
+.article-body ul li {
+  margin-bottom: 0.5rem;
+  position: relative;
+}
+
+.article-body ul li::marker {
+  color: #6b6b5a; 
+  font-size: 1em;
+}
